js/js.translator/testData/incremental/invalidation/exceptionsFromInlineFunctionWithCrossModuleInliner/lib2/l2.4.kt
fun qux(): Int {
    try {
        return foo()
    } catch(ex: NullPointerException) {
        return 4
    }
}
